--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ Fiona==1.8.13.post1
 geopandas==0.7.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
+matplotlib
+datetime
 munch==2.5.0
 numpy==1.18.2
 packaging==20.3
@@ -23,4 +25,5 @@ tornado==6.0.3
 typing-extensions==3.7.4.1
 bs4
 keras
+tensorflow
 requests
