--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,24 @@
-attrs==19.3.0
-bokeh==2.0.0
-click==7.1.1
-click-plugins==1.1.1
-cligj==0.5.0
-Fiona==1.8.13.post1
-geopandas==0.7.0
-Jinja2==2.11.1
-MarkupSafe==1.1.1
-matplotlib
-datetime
-munch==2.5.0
-numpy==1.18.2
-packaging==20.3
-pandas==1.0.3
-Pillow==7.0.0
-pyparsing==2.4.6
-pyproj==2.6.0
-python-dateutil==2.8.1
-pytz==2019.3
-PyYAML==5.3.1
-Shapely==1.7.0
-six==1.14.0
-sklearn
-tornado==6.0.3
-typing-extensions==3.7.4.1
-bs4
-keras
-requests
+python==3.7
+Flask==1.1.1
+gunicorn==20.0.4
+h5py==2.10.0
+Jinja2==2.10.3
+Keras==2.3.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+matplotlib==3.1.1
+nltk==3.4.5
+numpy==1.16.5
+numpydoc==0.9.1
+oauthlib==3.1.0
+opencv-python==4.3.0.36
+openpyxl==3.0.0
+pandas==0.25.1
+tensorboard==2.2.2
+tensorboard-plugin-wit==1.6.0.post3
+tensorflow==2.2.0
+tensorflow-estimator==2.2.0
+unicodecsv==0.14.1
+Unidecode==1.1.1
+urllib3==1.24.2
+Werkzeug==0.16.0
